# sc2_ai

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/: README.md
configs/bot/: adaptive_research.yaml  baseline_playable.yaml  debug.yaml  default.yaml  opponent_model_minimal_behavior.yaml  opponent_model_null.yaml  opponent_model_rule_based.yaml  opponent_model_tag_only.yaml  phase_b_revalidation_gameplay.yaml  r6_learned_belief.yaml  r7_rule_macro_advisor.yaml  r7_world_model_advisor.yaml
configs/evaluation/: phase1c_real_smoke.yaml  phase1d_ablation_opponent_model.yaml  phase1e_strategy_intervention_ablation.yaml  phase_a_baseline_dataset_v0_plan.yaml  phase_a_baseline_v0_chunk_1.yaml  phase_a_baseline_v0_chunk_2a.yaml  phase_a_baseline_v0_chunk_2b.yaml  phase_a_baseline_v0_chunk_3.yaml  phase_a_collection_levels.yaml  phase_a_real_smoke.yaml  phase_b_revalidation_duration_probe.yaml  phase_b_small_eval.yaml  r4_baseline_easy_pool_batch.yaml  r4_baseline_repair_or_confirmation.yaml  r5_paired_control.yaml  r5_paired_treatment.yaml  r6_external_house_bots.yaml  r6_internal_paired_easy.yaml  r6_internal_paired_medium.yaml  r7_external_validation.yaml  r7_online_internal.yaml  r7_strong_bot_seed_matches.yaml  smoke.yaml  validation_contract_dry_run.yaml
configs/logging/: telemetry.yaml
data/: README.md  README_DATA_POLICY.md
docs/: index.md  pro.txt  pro2.txt
docs/adr/: README.md  (+4 more)
evaluation/: AGENTS.md  README.md
requirements/: bot.txt  dev.txt  research.txt
research/: AGENTS.md  README.md
scripts/: README.md
tests/: README.md
(+405 files in other folders)
